test/compilable/test15907a.d
// REQUIRED_ARGS: -de
// PERMUTE_ARGS:
import imports.imp15907;

struct S
{
    private int a;
}

void test()
{
    process(S());
}
